@@ -1,4 +1,5 @@
 HEAD
+	+ Enforce share directory creation if not exists, even if not tagged
 	+ Enforce change of homeDrive for existing users
 	+ Fix regression deleting share directory after removing ebox ACL
 	+ Fix bug with shared state for shares and roaming profiles sync
